Refactor HTML structure and improve semantics

--- a/Session 01/BaiTapThucHanh/TrinhHuyHoang_IT103A_Session01_BaiTongHop.html
+++ b/Session 01/BaiTapThucHanh/TrinhHuyHoang_IT103A_Session01_BaiTongHop.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-
-  <body>
+  <main>
     <header>
       <h1>Trịnh Huy Hoàng</h1>
       <p><strong>Sinh viên ngành Công nghệ Thông tin</strong></p>
@@ -66,15 +65,16 @@
     <h3>Phân biệt Block và Inline Elements</h3>
     <p>Đây là thẻ P thứ nhất (<u style="text-decoration-style: dotted">Block Element</u>).</p>
     <p>
-      Đây là thẻ P thứ hai (<abbr title="">Block Element</abbr>). Hai thẻ
-      này nằm trên hai dòng riêng biệt.
+      Đây là thẻ P thứ hai (<u style="text-decoration-style: dotted">Block Element</u>). Hai thẻ này nằm trên hai dòng
+      riêng biệt.
     </p>
     <p>
       Đây là thẻ span (<u style="text-decoration-style: dotted">Inline Element</u>) cùng nằm trên một dòng.
     </p>
-    <footer>
-      <p>&copy; 2025 – Trang web được tạo bởi Trịnh Huy Hoàng</p>
-    </footer>
-  </body>
+  </main>
+  <footer>
+    <p>&copy; 2025 – Trang web được tạo bởi Trịnh Huy Hoàng</p>
+  </footer>
+</body>
 
 </html>
