--- a/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN03.html
+++ b/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN03.html
@@ -14,7 +14,7 @@
       ChatGPT có thể thuộc lòng dự án của một lập trình viên hơn cả bản thân anh
       ấy.
     </p>
-    <img src="./img/AI.jpg" />
+    <img src="./img/AI.jpg" alt="Cẩm Năng Sử Dụng AI"/>
     <p>
       Do đó, rất nhiều lập trình viên đã sử dụng AI này để mã hóa kiến thức phổ
       biến: từ giao diện API đến viết bộ chọn CSS, viết biểu thức chính quy và
@@ -22,3 +22,4 @@
     </p>
   </body>
 </html>
+
