Update alt attributes and improve HTML structure

--- a/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN05.html
+++ b/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN05.html
@@ -9,14 +9,14 @@
     <header>
       <h1>Giới thiệu về Môn Frontend</h1>
     </header>
-    <img src="/Session 01/BaiTap/img/fe.webp" alt="" />
+    <img src="/Session 01/BaiTap/img/fe.webp" alt="FrontEndDevelopment" />
     <h2>Frontend là gì?</h2>
     <p>
       Frontend là phần quan trọng của phát triển web, bao gồm mọi thứ mà người
       dùng có thể nhìn thấy và tương tác trực tiếp trên trang web
     </p>
     <h2>Các Công Nghệ Frontend Phổ Biến</h2>
-    <img src="./img/htmlcssjs.jpg" alt="" />
+    <img src="./img/htmlcssjs.jpg" alt="Các Công Nghệ FrontEnd" />
     <ul>
       <li>
         <a href="https://vi.wikipedia.org/wiki/HTML" target="_blank">HTML</a>:
@@ -43,3 +43,4 @@
     </p>
   </body>
 </html>
+
