--- a/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN06.html
+++ b/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN06.html
@@ -49,7 +49,7 @@
       Đây là một ảnh chụp màn hình từ một trong các dự án học tập gần đây của
       tôi, nơi tôi tạo ra một kế hoạch học tập cá nhân sử dụng Notion:
     </p>
-    <img src="./img/notion.webp" alt="" />
+    <img src="./img/notion.webp" alt="Notion" />
     <h2>Liên Hệ</h2>
     <p>
       Hãy cảm thấy tự do <a href="" target="_blank">gửi email cho tôi</a> nếu
@@ -60,3 +60,4 @@
     </footer>
   </body>
 </html>
+
