Fix image alt text in HTML file
Updated image alt text for better accessibility.

--- a/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN07.html
+++ b/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN07.html
@@ -29,7 +29,7 @@
     </ul>
     <h2>Tiêu Điểm Công Nghệ</h2>
     <figure>
-      <p><img src="./img/img_B7.webp" alt="" /></p>
+      <p><img src="./img/img_B7.webp" alt="AI" /></p>
       <p>Khám phá công nghệ hiện đại giúp thay đổi tương lai.</p>
     </figure>
     <h2>Thông Tin Hữu Ích</h2>
@@ -55,3 +55,4 @@
     </footer>
   </body>
 </html>
+
