--- a/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN08.html
+++ b/Session 01/BaiTap/TrinhHuyHoang_IT103A-K25_Session01_BTVN08.html
@@ -20,7 +20,7 @@
         chính:</strong
       >
     </p>
-    <img src="./img/mohinhdaotao.jpg" alt="" />
+    <img src="./img/mohinhdaotao.jpg" alt="3 Giai Đoạn" />
     <h2>1. Trước buổi học</h2>
     <p>Giai đoạn <mark>chuẩn bị, nghiên cứu</mark> và lập kế hoạch:</p>
     <ul>
@@ -79,3 +79,4 @@
     </footer>
   </body>
 </html>
+
